env/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capital-agent-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: capital-agent-service
      port:
        number: 80
